--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,7 @@ artifacts:
     location: "gs://${_BUCKET}/"
     paths:
     - "target/${_TARGET}"
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
+images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
