--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,5 +9,5 @@ artifacts:
     - "target/${_TARGET}"
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
-images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
+  args: ['build', '-t', 'gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}', '.']
+images: ['gcr.io${_PROJECT_ID}/${_IMAGE_NAME}']
