--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
-- name: "gcr.io/cloud-builders/mvn"
+
+- waitFor: ['-']
+  name: "gcr.io/cloud-builders/mvn"
   args:
   - package
 artifacts:
@@ -7,7 +9,7 @@ artifacts:
     location: "gs://${_BUCKET}/"
     paths:
     - "target/${_TARGET}"
-steps:
-- name: 'gcr.io/cloud-builders/docker'
+  waitFor: ['-']    
+  name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}', '.']
-images: ['gcr.io${_PROJECT_ID}/${_IMAGE_NAME}']
+  images: ['gcr.io${_PROJECT_ID}/${_IMAGE_NAME}']
