--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,15 @@
 steps:
 
+- waitFor: ['-']
   name: "gcr.io/cloud-builders/mvn"
   args:
   - package
-artifacts:
-  objects:
-    location: "gs://${_BUCKET}/"
-    paths:
-    - "target/${_TARGET}"
-
+  - artifacts:
+     objects:
+       location: "gs://${_BUCKET}/"
+       paths:
+       - "target/${_TARGET}"
+- waitFor: ['-']
   name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}', '.']
   images: ['gcr.io${_PROJECT_ID}/${_IMAGE_NAME}']
