--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,5 +11,5 @@ steps:
        - "target/${_TARGET}"
 - waitFor: ['-']
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}', '.']
-  images: ['gcr.io/${_PROJECT_ID}/${_IMAGE_NAME}']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
+  images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
