--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 
-- waitFor: ['-']
+#- waitFor: ['-']
   name: "gcr.io/cloud-builders/mvn"
   args:
   - package
@@ -9,3 +9,7 @@ steps:
        location: "gs://${_BUCKET}/"
        paths:
        - "target/${_TARGET}"
+#- waitFor: ['-']
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
+  images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
