--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,12 @@
 steps:
-
-#- waitFor: ['-']
-  name: "gcr.io/cloud-builders/mvn"
+- name: "gcr.io/cloud-builders/mvn"
   args:
   - package
-  - artifacts:
-     objects:
-       location: "gs://${_BUCKET}/"
-       paths:
-       - "target/${_TARGET}"
+artifacts:
+  objects:
+    location: "gs://${_BUCKET}/"
+    paths:
+    - "target/${_TARGET}""
 #- waitFor: ['-']
   name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
