--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ artifacts:
     location: "gs://${_BUCKET}/"
     paths:
     - "target/${_TARGET}""
-- waitFor: ['-']
-  name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
-  images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
+#- waitFor: ['-']
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
+#  images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
