--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,4 @@ artifacts:
   objects:
     location: "gs://${_BUCKET}/"
     paths:
-    - "target/${_TARGET}""
-#- waitFor: ['-']
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$IMAGE_NAME', '.']
-#  images: ['gcr.io/$PROJECT_ID/$IMAGE_NAME']
+    - "target/${_TARGET}"
