--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,4 @@
 steps:
-- name: "gcr.io/cloud-builders/mvn"
+- name: 'gcr.io/cloud-builders/mvn'
   args:
   - package
-artifacts:
-  objects:
-    location: "gs://${_BUCKET}/"
-    paths:
-    - "target/${_TARGET}"
