--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,9 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args:
   - package
-- waitFor: [-]
+- waitFor: ['-']
   name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
+- waitFor: ['-']
+  name: 'gcr.io/cloud-builders/gsutil'
+  args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
