--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args:
   - package
-  artifacts:
-    objects:
-    location: "gs://${_BUCKET}/"
+  - artifacts:
+       objects:
+       location: "gs://${_BUCKET}/"
   paths:
    -"target/${_TARGET}"}
 - waitFor: ['-']
