--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,9 +7,9 @@ steps:
        location: "gs://${_BUCKET}/"
   paths:
    -"target/${_TARGET}"}
-- waitFor: ['-']
-  name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
-- waitFor: ['-']
-  name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
+
+-  name: 'gcr.io/cloud-builders/docker'
+   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
+
+-  name: 'gcr.io/cloud-builders/gsutil'
+   args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
