--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,8 +5,8 @@ steps:
   - artifacts:
        objects:
        location: "gs://${_BUCKET}/"
-  paths:
-   -"target/${_TARGET}"}
+  - paths:
+       "target/${_TARGET}"
 
 -  name: 'gcr.io/cloud-builders/docker'
    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
