--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args:
-  - package
-  - artifacts:
-       objects:
-       location: "gs://${_BUCKET}/"
-  - paths:
-       "target/${_TARGET}"
+  args: ['install']
 
 -  name: 'gcr.io/cloud-builders/docker'
    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
