--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args: ['build']
+  #args: ['build']
+  args:
+  - package:
   artifacts:
   objects:
     location: "gs://${_BUCKET}/"
