--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,8 @@
 steps:
-- name: 'gcr.io/cloud-builders/mvn'
-  #args: ['build']
+- name: "gcr.io/cloud-builders/mvn"
   args:
-  - package:
-  artifacts:
+  - package
+artifacts:
   objects:
     location: "gs://${_BUCKET}/"
     paths:
