--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,11 @@ steps:
 - name: "gcr.io/cloud-builders/mvn"
   args:
   - package
-artifacts:
-  objects:
-    location: "gs://${_BUCKET}/"
-    paths:
-    - "target/${_TARGET}"
+  - artifacts:
+     objects:
+       location: "gs://${_BUCKET}/"
+       paths:
+       - "target/${_TARGET}"
     
 -  name: 'gcr.io/cloud-builders/docker'
    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
