--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,15 +2,15 @@ steps:
 - name: "gcr.io/cloud-builders/mvn"
   args:
   - package
-- artifacts:
+artifacts:
   objects:
     location: "gs://${_BUCKET}/"
     paths:
     - "target/${_TARGET}"
     
-#  name: 'gcr.io/cloud-builders/docker'
-#  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
+  name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
 
-#  name: 'gcr.io/cloud-builders/gsutil'
-#  args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
+  name: 'gcr.io/cloud-builders/gsutil'
+  args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
    
