--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: "gcr.io/cloud-builders/mvn"
   args:
   - package
-- artifacts:
+  artifacts:
   objects:
     location: "gs://${_BUCKET}/"
     paths:
