--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,10 @@
 steps:
 - name: "gcr.io/cloud-builders/mvn"
-  args:
-  - package
+  args: ['package']
   artifacts:
-  objects:
-    location: "gs://${_BUCKET}/"
-    paths:
-    - "target/${_TARGET}"
+    objects:
+      location: "gs://${_BUCKET}/"
+      paths: ['target/${_TARGET}']
     
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
