--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,8 @@ steps:
   
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
+  images: 
+  - 'gcr.io/$PROJECT_ID/simple-image'
 
 artifacts:
   objects:
