--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
   
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
-  images: ['gcr.io/$PROJECT_ID/simple-image']
+- images: ['gcr.io/$PROJECT_ID/simple-image']
 
 - name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
   args:
