--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,15 +7,15 @@ steps:
   
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
-- images: ['gcr.io/$PROJECT_ID/simple-image']
+images: ['gcr.io/$PROJECT_ID/simple-image']
 
-- name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
-  args:
-  - '-Dsonar.host.url=https://sonar.dpe-dev.netent.systems'
-  - '-Dsonar.login=33fb596adf1bc179099f469c404d9c576c24a218'
-  - '-Dsonar.projectKey=dpe-dev'
-  - '-Dsonar.organization=NetEnt'
-  - '-Dsonar.sources=.'
+name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
+args:
+- '-Dsonar.host.url=https://sonar.dpe-dev.netent.systems'
+- '-Dsonar.login=33fb596adf1bc179099f469c404d9c576c24a218'
+- '-Dsonar.projectKey=dpe-dev'
+- '-Dsonar.organization=NetEnt'
+- '-Dsonar.sources=.'
 
 artifacts:
   objects:
