--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,28 @@
+---
 steps:
-- name: 'gcr.io/cloud-builders/mvn'
-  args: ['package']
-    
-- name: 'gcr.io/cloud-builders/gsutil'
-  args: ['cp', 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar', 'chriken-0.0.1-SNAPSHOT.jar']
-  
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/simple-image', '.' ]
+  - name: 'gcr.io/cloud-builders/mvn'
+    args: ['package']
 
-- name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
-  args:
-  - '-Dsonar.host.url=https://sonar.dpe-dev.netent.systems'
-  - '-Dsonar.login=2e2211f9915ccabc2c1570ae1cb9d909b67dccab'
-  - '-Dsonar.projectKey=dpe-dev'
-#  - '-Dsonar.organization=Sonar way'
-  - '-Dsonar.sources=.'
+  - name: 'gcr.io/cloud-builders/gsutil'
+    args:
+      - 'cp'
+      - 'gs://chriken-bucket/chriken-0.0.1-SNAPSHOT.jar'
+      - 'chriken-0.0.1-SNAPSHOT.jar'
+
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/simple-image'
+      - '.'
+
+  - name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
+    args:
+      - '-Dsonar.host.url=https://sonar.dpe-dev.netent.systems'
+      - '-Dsonar.login=2e2211f9915ccabc2c1570ae1cb9d909b67dccab'
+      - '-Dsonar.projectKey=dpe-dev'
+      # - '-Dsonar.organization=NetEnt'
+      - '-Dsonar.sources=.'
 
 images: ['gcr.io/$PROJECT_ID/simple-image']
 
