--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 ---
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
-    args: ['package shade:shade']
+    args: ['package']
 
   - name: 'gcr.io/cloud-builders/gsutil'
     args:
