--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	        <configuration>
 	          <transformers>
 	            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-	              <mainClass>DpeInit.class</mainClass>
+	              <mainClass>chriken.DpeInit</mainClass>
 	            </transformer>
 	          </transformers>
 	        </configuration>
