--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 ---
 steps:
-  - name: 'maven:3.6.0-jdk-11-slim'
+  - name: 'gcr.io/cloud-builders/mvn'
     args: ['package']
 
   - name: 'gcr.io/cloud-builders/gsutil'
